[package]
name = "embassy-imxrt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
auto_impl = "1.1.0"
anyhow = { version = "*", default-features = false }
ral-registers = "0.1.3"
imxrt1011-pac = { path = "/home/k/imxrt-pacs/pacs/imxrt1011" }
embedded-io-async = "0.6.0"
bitvec = { version = "1.0.1", features = [], default-features = false }
bitflags = { version = "2.3.3" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { git = "https://github.com/rust-embedded/cortex-m.git", features = ["device"] }
critical-section = "1.1.2"
hex = { version = "*", default-features = false }
portable-atomic = "1.5.0"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", features = ["tick-hz-1_000_000"] }
embedded-storage = { version = "0.3" }
embedded-storage-async = { version = "0.4.1" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy.git", features = ["cortex-m", "prio-bits-2"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
defmt = { version = "0.3", optional = true }

[features]
rt = []
alloc = ["bitvec/alloc"]
default = ["rt", "defmt"]
defmt = ["dep:defmt", "embassy-usb-driver/defmt", "embassy-hal-internal/defmt"]
